Fixed contrast on buttons

--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ button {
   padding: 10px;
   width: 25vh;
   height: 8vh;
-  color: rgba(9,9,121,1);
+  color: #e7fda3;
   font-size: 18px;
   background-color: rgb(255,255,255, 0.3);
   box-shadow: 5px 10px 18px #a1a1a1;
